@startuml


class CreadorDePreguntas{
    +crearPregunta(nombreTipoDePregunta : String, enunciado: String, oCorrectas: Opciones, oPosibles: Opciones): Pregunta

}

class LectorDePreguntas{
    -recuperarPreguntas(jsonObjectPreguntas: JsonObject) : List<Pregunta>
    -recuperarPregunta(jsonObjectPregunta: JsonObject) : Pregunta
    +recuperarPreguntas(src_Preguntas : String) : List<Pregunta>
}

Abstract Class Pregunta{
    -enunciado: String
    -opcionesCorrectas: Opciones
    -opcionesPosibles: Opciones
    -calificador: Calificador
    -comodines: Collection<Comodin>
    -tipo: String

    +{abstract}{static}Pregunta(enunciado: String)
    +setPenalidad(unaPenalidad : Penalidad): void
    +asignarOpcionesCorrectas(opcionesCorrectas: Opciones): void
    +asignarOpcionesPosibles(opcionesPosibles: Opciones): void
    +asignarCalificador(calificador Calificador): void
    +asignarTipo(tipo: String): void
    +sonCorrectas(opciones: Opciones): boolean
    +calificar(Respuestas: List<Respuesta>): void

}

LectorDePreguntas..> CreadorDePreguntas
CreadorDePreguntas ..> Pregunta



@enduml